# gps-animator

./: LICENSE  README.md  pyproject.toml  test.py
src/gps_animator/: animation.py  config.py  generate_points.py
src/gps_animator/common/: build_line.py  map_utils.py  points.py  utils.py
src/gps_animator/manim_app/: helpers.py  scenes.py
